added target blanks to links and added triply porject

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                            </a>
 
-                           <a href="https://github.com/alberttang/groupProject1" data-toggle="tooltip" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://github.com/alberttang/groupProject1" target="_blank" data-toggle="tooltip" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
 
-                        <a href="https://alberttang.github.io/groupProject1/" data-toggle="tooltip" data-placement="bottom" title="Live Link">
+                        <a href="https://alberttang.github.io/groupProject1/" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Live Link">
                         <span class="item-desc">WeatherEats</span>
                         </a>
                     </div>
@@ -173,10 +173,10 @@
                                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                            </a> 
 
-                           <a href="https://github.com/LordKriegan/moviedates" data-toggle="tooltip" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://github.com/LordKriegan/moviedates" target="_blank" data-toggle="tooltip" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
                         <!-- Name Of Project -->
-                        <a href="https://movidates.herokuapp.com " data-toggle="tooltip" data-placement="bottom" title="Live Link">
+                        <a href="https://movidates.herokuapp.com " target="_blank" data-toggle="tooltip" data-placement="bottom" title="Live Link">
                             <span class="item-desc">MoviDates</span>
                             </a>
                     </div>
@@ -190,10 +190,10 @@
                                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                             </a>
 
-                           <a href="https://github.com/rey-adam/TriviaGame" data-toggle="tooltip" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://github.com/rey-adam/TriviaGame" data-toggle="tooltip" target="_blank" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
                         </div>
                         <!-- Name Of Project -->
-                        <a href="https://rey-adam.github.io/TriviaGame/" data-toggle="tooltip" data-placement="bottom" title="Live Link">
+                        <a href="https://www.reyadamcruz.com/TriviaGame/" data-toggle="tooltip" target="_blank" data-placement="bottom" title="Live Link">
                         <span class="item-desc">TriviaGame</span>
                         </a>
                     </div>
@@ -207,10 +207,12 @@
                                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
                            </a> 
 
-                           <a href="#" ><i class="fa fa-link fa-lg" aria-hidden="true"></i></a> 
+                           <a href="https://github.com/reyadam/Triply" data-toggle="tooltip" target="_blank" data-placement="bottom" title="GitHub Link"><i class="fa fa-link fa-lg" aria-hidden="true"></i></a>
                         </div>
                         <!-- Name Of Project -->
-                        <span class="item-desc">Will be available soon</span>
+                        <a href="http://triplydb.herokuapp.com" data-toggle="tooltip" target="_blank" data-placement="bottom" title="Live Link">
+                        <span class="item-desc">Triply</span>
+                        </a>
                     </div>
                 </div>
             </div><!-- Close Row -->
