changed banner text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                      <h1>
                          I'm Rey Adam Cruz
                      </h1>
-                     <h2>Web Developer / Front End</h2>  
+                     <h2>Web Developer</h2>  
                  </div>
                     <a class="angle-down smoothScroll" href="#about">
                       <i class="fa fa-angle-down" aria-hidden="true"></i>
