edited mini bio

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
                 <p class="sub-p">
                     I enjoy turning intricate problems into simple and beautiful interface design. When I'm not coding, you can find me at National Parks or learning new things.
-                    I have a Bachelor's Degree in Sociology from California State University of Long Beach. 
-                    I completed the Immersive Full Stack Web Development Program at University of California, Irvine (UCI).
+                </br>I have a Bachelor's Degree in Sociology from California State University of Long Beach. 
+                 </br>I completed the Immersive Full Stack Web Development Program at University of California, Irvine (UCI).
                 </p>
 
                  <p>Random Facts 
