added alt image names

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <!-- Work (1)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
 
-                        <img class="img-responsive" src="images/weathereats.png" alt="sample image">
+                        <img class="img-responsive" src="images/weathereats.png" alt="WeatherEats project image">
                         <div class="div-hover">
 
                            <a href="images/weathereats.png" class="image-popup-vertical-fit">
@@ -167,7 +167,7 @@
                      <!-- Work (2)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
 
-                        <img class="img-responsive" src="images/movidates.png" alt="sample image">
+                        <img class="img-responsive" src="images/movidates.png" alt="MovieDate project image">
                         <div class="div-hover"> 
 
                            <a href="images/movidates.png" class="image-popup-vertical-fit">
@@ -184,7 +184,7 @@
                      <!-- Work (3)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
 
-                        <img class="img-responsive" src="images/triviagame.png" alt="sample image">
+                        <img class="img-responsive" src="images/triviagame.png" alt="Trivia Game image">
                         <div class="div-hover">
 
                            <a href="images/triviagame.png" class="image-popup-vertical-fit">
@@ -201,7 +201,7 @@
                      <!-- Work (4)-->
                     <div class="col-xs-12 col-sm-4 col-md-3 filtr-item">
 
-                        <img class="img-responsive" src="images/triply.png" alt="sample image">
+                        <img class="img-responsive" src="images/triply.png" alt="Triply project image">
                         <div class="div-hover"> 
 
                            <a href="images/triply.png" class="image-popup-vertical-fit">
